--- a/home_module/templates/home_module/index_page.html
+++ b/home_module/templates/home_module/index_page.html
@@ -3,7 +3,7 @@
 {% load poll_extras %}
 
 {% block title %}
-    فروشگاه تاپ لرن | صفحه اصلی
+    فروشگاه تستی لباس
 {% endblock %}
 
 {% block content %}
